update the controller of api

--- a/RestApi/appsettings.json
+++ b/RestApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=.;Database=Villa_DB;User=SA;Password=911004wsrA;Encrypt=False;"
+  }
 }
